🚀 Initial commit: JAMES IDE - Joint Algorithm Model Environment System
✨ Features:
- Multi-language IDE supporting PILOT, BASIC, Logo, Python, JavaScript, Perl
- Modern themed UI with 8 beautiful color schemes
- Advanced code editor with syntax highlighting
- Integrated graphics canvas for Logo turtle graphics
- Plugin system for extensibility
- Game development engine
- Audio and hardware simulation
- Educational programming tools

🛠️ VS Code Integration:
- Workspace configuration for optimal development
- GitHub Actions CI/CD pipeline
- Automated testing and linting
- Custom file associations for JAMES languages

📁 Project Structure:
- Modular architecture with clear separation of concerns
- Core interpreter and language handlers
- GUI components and themes
- Plugin system and game engine
- Comprehensive examples and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,35 @@ temp/
 
 # Config files (user-specific)
 .james/
+config.json
 
 # Cache directories
 .cache/
+
+# Test and temporary files
+test_*.py
+*_test.py
+debug_*.py
+benchmark_*.py
+stress_test_*.py
+*_backup.py
+*_corrupted*.py
+temp_*.py
+edge_case_*.py
+diagnose_*.py
+
+# Documentation files (will be generated)
+*_SUMMARY.md
+*_REPORT.md
+*_GUIDE.md
+*_COMPLETE.md
+
+# Game and demo files (examples only)
+demo_*.py
+run_*_direct.py
+
+# File system test files
+"test
+"test_file.txt"
+test file with spaces.txt
+unicode_test.txt
