Clean up JAMES references in plugin system
- Updated all plugin docstrings to reference TimeWarp IDE
- Changed JAMESPlugin exports to TimeWarpPlugin
- Updated plugin README files and manifest.json files
- Fixed plugin architecture references to TimeWarp framework
- Ensured complete consistency in plugin documentation

--- a/tools/plugins/hardware_controller/manifest.json
+++ b/tools/plugins/hardware_controller/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Hardware Controller",
   "version": "1.0.0",
-  "author": "JAMES IDE Team",
+  "author": "TimeWarp IDE Team",
   "description": "Professional hardware interface tool with GPIO control, sensor management, device automation, and Raspberry Pi integration",
   "category": "hardware",
   "entry_point": "plugin.py",
