fix: Further improve CI/CD pipeline reliability
- Suppress pygame startup messages and warnings for cleaner CI output
- Add PYGAME_HIDE_SUPPORT_PROMPT environment variable
- Improve error handling in CI test runner
- Make tests more robust and CI-friendly
- Remove verbose tracebacks for cleaner CI logs

This should resolve any remaining output-related CI issues.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         export SDL_VIDEODRIVER=dummy
         export SDL_AUDIODRIVER=dummy
+        export PYGAME_HIDE_SUPPORT_PROMPT=1
         xvfb-run -a python run_tests_ci.py
         
     - name: Test TimeWarp IDE startup
@@ -44,6 +45,7 @@ jobs:
         # Test that TimeWarp can import without GUI
         export SDL_VIDEODRIVER=dummy
         export SDL_AUDIODRIVER=dummy
+        export PYGAME_HIDE_SUPPORT_PROMPT=1
         python -c "import sys; sys.path.append('.'); from core.interpreter import TimeWarpInterpreter; print('✅ TimeWarp core imports successfully')"
 
   lint:
