Initial commit: Time_Warp IDE with multi-language support
- Added unified canvas with GW BASIC screen modes
- Implemented support for 9 programming languages (PILOT, BASIC, Logo, Python, JavaScript, Pascal, Prolog, Forth, Perl)
- Fixed screen mode switching and color validation issues
- Added comprehensive test framework and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,10 @@ run_*_direct.py
 "test_file.txt"
 test file with spaces.txt
 unicode_test.txt
+
+# Unrelated repositories
+seahorse/
+
 # Build directory
 build/
 
