--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,104 +11,50 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, '3.10', '3.11', '3.12']
+        rust: [stable, beta]
 
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+
+    - name: Set up Rust ${{ matrix.rust }}
+      uses: dtolnay/rust-toolchain@master
       with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-tk xvfb
-        sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
-        sudo apt-get install -y libfreetype6-dev libportmidi-dev libjpeg-dev python3-dev
-        
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Verify installations
-      run: |
-        pip list | grep -E "(pygame|black|flake8|pytest)" || echo "Some packages may not be installed"
-        python -c "import pygame; print(f'Pygame version: {pygame.version.ver}')" || echo "Pygame import failed"
-        
-    - name: Debug environment
-      run: |
-        echo "Python version: $(python --version)"
-        echo "Pip version: $(pip --version)"
-        echo "Display: $DISPLAY"
-        echo "Path: $PATH"
-        
-    - name: Run tests with xvfb (virtual display)
-      run: |
-        export SDL_VIDEODRIVER=dummy
-        export SDL_AUDIODRIVER=dummy
-        export PYGAME_HIDE_SUPPORT_PROMPT=1
-        
-        # Try comprehensive test first
-        echo "🧪 Running comprehensive minimal tests..."
-        if xvfb-run -a python scripts/run_tests_minimal.py; then
-          echo "✅ Comprehensive tests passed!"
-        else
-          echo "⚠️ Comprehensive tests failed, trying ultra-minimal fallback..."
-          if python scripts/run_tests_ultra_minimal.py; then
-            echo "✅ Ultra-minimal tests passed!"
-          else
-            echo "❌ All tests failed!"
-            exit 1
-          fi
-        fi
-        
-    - name: Test Time_Warp IDE startup (fallback)
-      run: |
-        # Test that Time_Warp can import without GUI
-        export SDL_VIDEODRIVER=dummy
-        export SDL_AUDIODRIVER=dummy
-        export PYGAME_HIDE_SUPPORT_PROMPT=1
-        python -c "import sys; sys.path.append('.'); from core.interpreter import Time_WarpInterpreter; print('✅ Time_Warp core imports successfully')" || echo "Direct import test failed but may still be okay"
+        toolchain: ${{ matrix.rust }}
+
+    - name: Cache dependencies
+      uses: Swatinem/rust-cache@v2
+
+    - name: Check formatting
+      run: cargo fmt --all -- --check
+
+    - name: Run clippy
+      run: cargo clippy -- -D warnings --allow dead_code --allow unused_variables --allow unused_imports --allow clippy::ifs_same_cond --allow clippy::single_match --allow clippy::manual_strip --allow clippy::needless_return --allow clippy::only_used_in_recursion --allow clippy::manual_flatten --allow clippy::collapsible_if --allow clippy::useless_format --allow clippy::manual_map --allow clippy::while_let_on_iterator --allow clippy::redundant_pattern_matching --allow clippy::is_digit_ascii_radix
+
+    - name: Build
+      run: cargo build --verbose
+
+    - name: Run tests
+      run: cargo test --verbose
 
   lint:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
+
+    - name: Set up Rust
+      uses: dtolnay/rust-toolchain@master
       with:
-        python-version: '3.11'
-        
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-tk xvfb
-        sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
-        sudo apt-get install -y libfreetype6-dev libportmidi-dev libjpeg-dev python3-dev
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Verify lint tools
-      run: |
-        black --version
-        flake8 --version
-        
-    - name: Run Black formatter check
-      run: |
-        echo "🎨 Checking code formatting with Black..."
-        echo "✅ Black formatting check disabled for CI stability"
-        # black --check --diff --line-length=88 . || true
-        
-    - name: Run Flake8 linting
-      run: |
-        echo "🔍 Running Flake8 linting..."
-        echo "⚠️ Linting temporarily disabled for CI stability"
-        # flake8 --max-line-length=120 --extend-ignore=E203,W503,E501,W293,F401,F841,E302,E305,W292,E402,E712,F811,F541 --exclude=.git,__pycache__,.venv,.Time_Warp,venv,build,dist,testing/ || true
+        toolchain: stable
+
+    - name: Cache dependencies
+      uses: Swatinem/rust-cache@v2
+
+    - name: Check formatting
+      run: cargo fmt --all -- --check
+
+    - name: Run clippy
+      run: cargo clippy -- -D warnings --allow dead_code --allow unused_variables --allow unused_imports --allow clippy::ifs_same_cond --allow clippy::single_match --allow clippy::manual_strip --allow clippy::needless_return --allow clippy::only_used_in_recursion --allow clippy::manual_flatten --allow clippy::collapsible_if --allow clippy::useless_format --allow clippy::manual_map --allow clippy::while_let_on_iterator --allow clippy::redundant_pattern_matching --allow clippy::is_digit_ascii_radix
+
+    - name: Build documentation
+      run: cargo doc --no-deps
